argo-cd/argo-ingress.yml
# for working with alb type application you need to install helm and install the ingress controller aws.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argo-cd
  namespace: argo-cd # the namespace that sperate the pods  between envroments.
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # the alb move the traffic directly to pods
    alb.ingress.kubernetes.io/security-groups: sg-0de4d874368510b0f
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/ec9fe460-316a-4c28-af91-ac9e7d530cca
    alb.ingress.kubernetes.io/subnets: subnet-0952293eea1cd2039,subnet-04a7b66e961fc6aa6 # Public subnetbs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # listen ports
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
                                           
spec:
  ingressClassName: alb
  rules:
  # those rules for the application to allow the metrics/presentation/and the application
    - host: argo-cd.spider-shlomo.com
    - http:
        paths:
          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation    

          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-argo-cd-argocd-server
                port:
                  number: 80
